# learning-ml

./: 60 Minute Blitz.md  Definitions.md  Neural Network Overview Table.md  README.md  RNN.md  yap
.obsidian/: workspace.json
CNN/: CNN.md
Python Specific Stuff/: Autograd in Pytorch.md  Bare Bones NN.md  Intro to numpy.md  Learning Rate Schedulers.md
RNN/: Links.md  NLP From Scratch Classifying Names with a Character-Level RNN.md  h_t = tanh(W_hh * h_{t-1} + W_xh * x_t).md
code/: NLP_classifier.ipynb  README.md  neural_networks_tutorial.md  pyproject.toml  rnn_model.pth
code/training/training_iter_0/: rnn_info_0.txt  training_time_0.txt
code/training/training_iter_1/: rnn_info_1.txt  training_time_1.txt
code/training/training_iter_16/: rnn_info_16.txt  training_time_16.txt  training_validation_ratio_16.txt
code/training/training_iter_18/: rnn_info_18.txt
code/training/training_iter_2/: rnn_info_2.txt  training_time_2.txt
code/training/training_iter_3/: rnn_info_3.txt  training_time_3.txt
code/training/training_iter_4/: rnn_info_4.txt  training_time_4.txt
code/training/training_iter_5/: rnn_info_5.txt  training_time_5.txt
code/training/training_iter_6/: rnn_info_6.txt  training_time_6.txt
code/training/training_iter_7/: rnn_info_7.txt  training_time_7.txt
